fix update email problem

--- a/src/apps/copo_core/templates/copo/base.html
+++ b/src/apps/copo_core/templates/copo/base.html
@@ -241,7 +241,7 @@
 
         function do_email_form() {
             var component = "";
-            var copoFormsURL = "/copo/copo_profile_forms/";
+            var copoFormsURL = "/copo/copo_forms/";
 
             var message = "An email address is required for your user account!";
             var errMessage = "Please enter a valid email address!";
