updating to https in s3 command

--- a/src/apps/copo_core/templates/copo/deprecated_copo_ena_submit_assembly.html
+++ b/src/apps/copo_core/templates/copo/deprecated_copo_ena_submit_assembly.html
@@ -144,6 +144,7 @@
                             </li>
                             <li>Run <kbd>ls -F1</kbd></li>
                             <li>Paste the result into the box below, and click Process</li>
+                            <li>jkljfklds</li>
                         </ol>
                         <form>
                             <textarea id="url_text_area" class="form-control" rows="10"></textarea>
