--- a/src/apps/copo_core/templates/copo/components_template.html
+++ b/src/apps/copo_core/templates/copo/components_template.html
@@ -584,7 +584,7 @@
     </a>    
 
     <!-- semantic ui expanding menu -->
-    <span class="ui compact menu expanding_menu" id="expanding_menu">
+    <!--span class="ui compact menu expanding_menu" id="expanding_menu">
         <div class="ui up pointing dropdown link item">
             Actions
             <i class="dropdown icon"></i>
@@ -611,7 +611,7 @@
             </div>
         </div>
 
-    </span>
+    </span-->
 
 
     <!-- button to for dtol_sample_managers to accept/reject submitted samples -->
