--- a/src/apps/copo_profile/templates/copo/profile/copo_profile_record.html
+++ b/src/apps/copo_profile/templates/copo/profile/copo_profile_record.html
@@ -87,8 +87,8 @@
                                     <a class="item action" profile_component="stand-alone" anchor_type="reads" data-action_type="read">Submit Reads</a>
                                     <a class="item action" profile_component="stand-alone" anchor_type="assembly" data-action_type="assembly">Submit Assembly</a>
                                     <a class="item action" profile_component="stand-alone" anchor_type="seq_annotation" data-action_type="seq_annotation">Submit Annotation</a>
-                                    <a class="item action" profile_component="dtol" anchor_type="samples" data-action_type="samples">Submit DTOL/ASG manifest</a>
-                                    <a class="item action" profile_component="erga" anchor_type="samples" data-action_type="samples">Submit ERGA Manifest</a>
+                                    <a class="item action" profile_component="dtol" anchor_type="sample" data-action_type="sample">Submit DTOL/ASG manifest</a>
+                                    <a class="item action" profile_component="erga" anchor_type="sample" data-action_type="sample">Submit ERGA Manifest</a>
                                     <a class="item action" profile_component="erga" anchor_type="taggedseq" data-action_type="taggedseq">Submit Barcoding Manifest</a>
                                     <a class="item action" profile_component="dtol" anchor_type="taggedseq" data-action_type="taggedseq">Submit Barcoding Manifest</a>
                                     <a class="item action" profile_component="all" anchor_type="all" data-action_type="release_study">Release Study</a>
