--- a/src/apps/copo_file/templates/copo/copo_files.html
+++ b/src/apps/copo_file/templates/copo/copo_files.html
@@ -17,6 +17,7 @@
     <div hidden id="hidden_attrs">
         <!-- hidden attributes  -->
         <input type="hidden" id="nav_component_name" value="files"/>
+        <input type="hidden" id="profile_type" value="{{ profile.type | get_short_profile_type }}"/>
         <input type="hidden" id="profile_title" value="{{ profile.title }}"/>
     </div>
 {% endblock browse_header_block %}
