--- a/src/apps/copo_read_submission/templates/copo/copo_read.html
+++ b/src/apps/copo_read_submission/templates/copo/copo_read.html
@@ -29,8 +29,11 @@
     <div hidden id="hidden_attrs">
         <!-- hidden attributes  -->
         <input type="hidden" id="profile_title" value="{{ profile.title }}"/>
+        <input type="hidden" id="profile_type" value="{{ profile.type | get_short_profile_type }}"/>
         <input type="hidden" id="nav_component_name" value="read"/>
-        <input type="hidden" id="blank_manifest_url" value="{{  'READ'|get_blank_manifest_url  }}"/>  }}"
+        <input type="hidden" id="blank_manifest_url" value="{{  'read'|get_blank_manifest_url  }}"/>  }}"
+
+        <input type="hidden" id="blank_manifest_url_read" value="{% url 'copo_read_submission:download_initial_manfiest' profile_id=profile_id %}"/>  }}"
         {% for checklist in checklists %}
             <input type="hidden" id="blank_manifest_url_{{checklist.primary_id}}" value="{{ checklist.primary_id  | get_blank_manifest_url  }}"/>  }}"
         {% endfor %}
