Added page title; Decreased refresh delay;

--- a/src/apps/copo_profile/templates/copo/profile/copo_profile_index.html
+++ b/src/apps/copo_profile/templates/copo/profile/copo_profile_index.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 
-{% block title_block %} Index {% endblock %}
+{% block title_block %} Profiles {% endblock %}
 
 {% block tagline_block %}
 
