--- a/src/apps/copo_dtol_submission/templates/copo/copo_sample_accept_reject.html
+++ b/src/apps/copo_dtol_submission/templates/copo/copo_sample_accept_reject.html
@@ -134,9 +134,9 @@
     <div class="row">
 
         <div class="col-lg-3 col-md-3 col-sm-3">
-            <ul class="nav nav-tabs" id="sequencing_center_filter">
+            <ul class="nav nav-tabs" id="sequencing_centre_filter">
                 <li class="hot_tab in active">
-                    <a data-toggle="tab" href="my_profiles">Profiles for My Sequencing Center</a>
+                    <a data-toggle="tab" href="my_profiles">Profiles for My Sequencing Centre</a>
                 </li>
                 <li class="hot_tab in">
                     <a data-toggle="tab" href="all_profiles">All profiles</a>
