--- a/src/apps/copo_profile/templates/copo/profile/copo_profile_record.html
+++ b/src/apps/copo_profile/templates/copo/profile/copo_profile_record.html
@@ -14,7 +14,7 @@
                         <div id="{{ profile.id }}" class="pull-right ellipsisDiv">
                             <i id="ellipsisID" class="fa fa-ellipsis-v" data-toggle="popover"
                                data-html="true" role="button"
-                               title='<i id="popoverCloseBtn" class="fa fa-times pull-right"></i>'></i>
+                               title='<i id="profileOptionsPopoverCloseBtn" class="fa fa-times pull-right"></i>'></i>
                         </div>
                     </div>
                 </div>
@@ -25,100 +25,87 @@
                     <div class="col-sm-12 col-md-12 col-lg-12"
                          style="height:fit-content;">
                         <!--Panel content -->
-                        <div class="date_createdDiv" style="display:inline; margin-bottom: 10px;" date_created="{{ profile.date_created }}"><span class="boldText">Created: </span> {{ profile.date_created }}</div>
-                        
-                        {% if profile.study_status %}
-                            <div class="studyStatusDiv" style="margin-top: 10px;"><span class="boldText">Release Status: </span> <span id="study_status_{{profile.id}}">{{ profile.study_status | get_first_value_from_array}}</span></div>
-                            <div style="margin-top: 10px;"><span class="boldText">Release Date: </span>    
-                                <span id="study_release_date_{{profile.id}}">{{ profile.study_release_date | get_first_value_from_array}}</span></div>
-                        {% endif %}                        
-                        <div class="boldText" style="margin-top: 10px;">Description:</div>
-
-                        {% if profile.associated_type %}
-                            <div class="showEllipsisFor2TextLines associatedTypes_marginBottom profileDescription">
-                                {{ profile.description }}</div>
-                            <div class="associated_type_div_label" style="display: block;">
-                                Associated
-                                Profile Type(s):
-                            </div>
-
-                            {% if profile.study_status %}
-                                <div class="associated_type_div_value {% if profile.associated_type|length == 1 %}one_associatedType_marginBottom_release {% elif profile.associated_type|length == 2 %}two_associatedTypes_marginBottom_release {% elif profile.associated_type|length == 3 %}three_associatedTypes_marginBottom_release {% else %}several_associatedTypes_marginBottom_release {% endif %}">
-                                    <ul class="associated_type_ulTag">
-                                        {% for element in profile.associated_type %}
-                                            <li>  {{ element.value }}
-                                                <i class="fa fa-info-circle associated_type_info_icon"
-                                                title="{{ element.label }}"></i>
-                                            </li>
-
-                                        {% endfor %}
-                                    </ul>
-                                </div>
-                            {% else %}
-                                <div class="associated_type_div_value {% if profile.associated_type|length == 1 %}one_associatedType_marginBottom {% elif profile.associated_type|length == 2 %}two_associatedTypes_marginBottom {% elif profile.associated_type|length == 3 %}three_associatedTypes_marginBottom {% else %}several_associatedTypes_marginBottom {% endif %}">
-                                    <ul class="associated_type_ulTag">
-                                        {% for element in profile.associated_type %}
-                                            <li>  {{ element.value }}
-                                                <i class="fa fa-info-circle associated_type_info_icon"
-                                                title="{{ element.label }}"></i>
-                                            </li>
-
-                                        {% endfor %}
-                                    </ul>
-                                </div>
+                        <!-- Row: Profile information-->
+                        <div class="profile-info-row">
+                            <div class="date_createdDiv" style="display:inline; margin-bottom: 10px;" date_created="{{ profile.date_created }}"><span class="boldText">Created: </span> {{ profile.date_created }}</div>
+                            <div class="boldText" style="margin-top: 10px;">Description:</div>
+                            <div class="showEllipsisFor2TextLines profileDescription">{{ profile.description }}</div>
+                            
+                            {% if profile.study_status or profile.associated_type or profile.sequencing_centre %}
+                                <a id="showMoreProfileInfoBtn" class="btn {% if profile.description.strip|length < 56 %}showMoreProfileInfoBtn_margin{% elif profile.description.strip|length >= 56 %}showMoreProfileInfoBtn_2LineDescriptionText{% endif %}" href="#" rel="popover"
+                                    data-popover-content="#showMoreProfileInfoContent" data-placement="right">View more...</a>                         
                             {% endif %}
-                        {% else %}
-                            {% if profile.study_status %}
-                                <div class="showEllipsisFor2TextLines profileDescription {% if profile.description.strip|length < 56 %}no_associatedTypes_marginBottom_release{% elif profile.description.strip|length >= 56 %}no_associatedTypes_marginBottom_2LineDescriptionText_release{% endif %}">
-                                    {{ profile.description }}</div>
-                            {% else %}     
-                                <div class="showEllipsisFor2TextLines profileDescription {% if profile.description.strip|length < 56 %}no_associatedTypes_marginBottom{% elif profile.description.strip|length >= 56 %}no_associatedTypes_marginBottom_2LineDescriptionText{% endif %}">
-                                    {{ profile.description }}</div>
-                            {% endif %}
-                        {% endif %}
 
-                        {% if profile.sequencing_center %}
-                        <div class="sequencing_center_label" style="display: block;">
-                            Associated Sequencing Center(s):
+                            <!-- Content for 'showMoreProfileInfo' popover -->
+                            <div id="showMoreProfileInfoContent" class="hidden">
+                                <div class="popover-heading"></div>
+                                <div class="popover-content showMoreProfileInfoPopover-content-div">
+                                    {% if profile.study_status %}
+                                        <div class="studyStatusDiv" style="margin-top: 10px;">
+                                            <span class="boldText">Release Status: </span> 
+                                            <span id="study_status_{{profile.id}}">{{ profile.study_status | get_first_value_from_array}}</span>
+                                        </div>
+                                        <div style="margin-top: 10px;"><span class="boldText">Release Date: </span>    
+                                            <span id="study_release_date_{{profile.id}}">{{ profile.study_release_date | get_first_value_from_array}}</span>
+                                        </div>
+                                    {% endif %}
+                                    {% if profile.associated_type %}
+                                        <div class="profile-info-label">
+                                            Associated
+                                            Profile Type(s):
+                                        </div>
+                                        <div class="associated_type_div_value ">
+                                            <ul class="associated_type_ulTag">
+                                                {% for element in profile.associated_type %}
+                                                    <li> {{ element.value }}
+                                                        <i class="fa fa-info-circle associated_type_info_icon" title="{{ element.label }}"></i>
+                                                    </li>
+                                                {% endfor %}
+                                            </ul>
+                                        </div>
+                                    {% endif %}
+                                    {% if profile.sequencing_centre %}
+                                        <div class="profile-info-label">
+                                            Associated Sequencing Centre(s):
+                                        </div>
+                                        <div class="sequencing_centre_div_value">
+                                            <ul class="sequencing_centre_ulTag">
+                                                {% for element in profile.sequencing_centre%}
+                                                    <li> {{ element }} </li>
+                                                {% endfor %}
+                                            </ul>
+                                        </div>
+                                    {% endif %}
+                                
+                                </div>
+                            </div>                  
                         </div>
-                        <ul class="sequencing_center_type_div_value_ulTag">
-                            <div
-                                class="sequencing_center_type_div_value {% if profile.sequencing_center|length == 1 %}one_sequencingType_marginBottom {% elif profile.sequencing_center|length == 2 %}two_sequencingTypes_marginBottom {% elif profile.sequencing_center|length == 3 %}three_sequencingTypes_marginBottom {% else %}several_sequencingTypes_marginBottom {% endif %}">
-
-                                {% for element in profile.sequencing_center %}
-                                <li> {{ element }}
-
-                                </li>
-
-                                {% endfor %}
-                        </ul>
-                        {% endif %}
-                        
-
-                        
                         <!--Panel expanding menu -->
-                        <span class="ui compact menu expanding_menu" id="expanding_menu">
-                            <div class="ui up pointing dropdown link item" tabindex="0">
-                                Actions
-                                <i class="dropdown icon"></i>
-                                <div class="menu" tabindex="-1">
-                                    <a class="item action" profile_component="stand-alone" anchor_type="files" data-action_type="files">Upload Files</a>                                   
-                                    <a class="item action" profile_component="stand-alone" anchor_type="reads" data-action_type="read">Submit Reads</a>
-                                    <a class="item action" profile_component="stand-alone" anchor_type="assembly" data-action_type="assembly">Submit Assembly</a>
-                                    <a class="item action" profile_component="stand-alone" anchor_type="seq_annotation" data-action_type="seq_annotation">Submit Annotation</a>
-                                    <a class="item action" profile_component="dtol" anchor_type="samples" data-action_type="samples">Submit DTOL/ASG manifest</a>
-                                    <a class="item action" profile_component="erga" anchor_type="samples" data-action_type="samples">Submit ERGA Manifest</a>
-                                    <a class="item action" profile_component="erga" anchor_type="taggedseq" data-action_type="taggedseq">Submit Barcoding Manifest</a>
-                                    <a class="item action" profile_component="dtol" anchor_type="taggedseq" data-action_type="taggedseq">Submit Barcoding Manifest</a>
-                                    <a class="item action" profile_component="all" anchor_type="all" data-action_type="release_study">Release Study</a>
+                        <!-- Row: Profile menu-->
+                        <div class="{% if profile.study_status or profile.associated_type or profile.sequencing_centre %}menu-row{% else %}menu-no-addtl-info-row{% endif %}">
+                            <span class="ui compact menu expanding_menu" id="expanding_menu">
+                                <div class="ui up pointing dropdown link item" tabindex="0">
+                                    Actions
+                                    <i class="dropdown icon"></i>
+                                    <div class="menu" tabindex="-1">
+                                        <a class="item action" profile_component="stand-alone" anchor_type="files" data-action_type="files">Upload Files</a>                                   
+                                        <a class="item action" profile_component="stand-alone" anchor_type="reads" data-action_type="read">Submit Reads</a>
+                                        <a class="item action" profile_component="stand-alone" anchor_type="assembly" data-action_type="assembly">Submit Assembly</a>
+                                        <a class="item action" profile_component="stand-alone" anchor_type="seq_annotation" data-action_type="seq_annotation">Submit Annotation</a>
+                                        <a class="item action" profile_component="dtol" anchor_type="samples" data-action_type="samples">Submit DTOL/ASG manifest</a>
+                                        <a class="item action" profile_component="erga" anchor_type="samples" data-action_type="samples">Submit ERGA Manifest</a>
+                                        <a class="item action" profile_component="erga" anchor_type="taggedseq" data-action_type="taggedseq">Submit Barcoding Manifest</a>
+                                        <a class="item action" profile_component="dtol" anchor_type="taggedseq" data-action_type="taggedseq">Submit Barcoding Manifest</a>
+                                        <a class="item action" profile_component="all" anchor_type="all" data-action_type="release_study">Release Study</a>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="ui up pointing dropdown link item" tabindex="0">
-                                Components
-                                <i class="dropdown icon"></i>
-                                <div class="menu comp" tabindex="-1"></div>
-                            </div>
-                        </span>
+                                <div class="ui up pointing dropdown link item" tabindex="0">
+                                    Components
+                                    <i class="dropdown icon"></i>
+                                    <div class="menu comp" tabindex="-1"></div>
+                                </div>
+                            </span>
+                        </div>
                     </div>
                 </div>
             </div>
