--- a/src/apps/copo_tol_dashboard/static/tol_dashboard/css/copo_tol_dashboard.css
+++ b/src/apps/copo_tol_dashboard/static/tol_dashboard/css/copo_tol_dashboard.css
@@ -9,7 +9,7 @@ canvas {
     object-fit: contain; /*  Enables reponsiveness*/
 }
 
-.center-div {
+.centre-div {
     display: grid;
     place-items: center;
 }
