--- a/src/apps/copo_tol_dashboard/templates/tol_dashboard/copo_tol_dashboard.html
+++ b/src/apps/copo_tol_dashboard/templates/tol_dashboard/copo_tol_dashboard.html
@@ -245,7 +245,7 @@
                 <div class="col-lg-4 col-md-6 mt-4 mb-4 ui link cards">
                     <div class="card z-index-2" style="height:660px; width:600px">
                         <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2 bg-transparent">
-                            <div class="card-body center-div">
+                            <div class="card-body centre-div">
                                 {#GAL names table is needed for pie chart to be shown#}
                                 <div hidden class="col-lg-2 col-md-2 col-sm-2">
                                     <table id="gal_names" class="table table-hover table-condensed">
