--- a/src/apps/copo_tol_dashboard/templates/tol_dashboard/copo_tol_inspect_gal.html
+++ b/src/apps/copo_tol_dashboard/templates/tol_dashboard/copo_tol_inspect_gal.html
@@ -96,7 +96,7 @@
                             aria-label="GAL sample goal percentage representation" role="figure">
                     </canvas>
                 </div>
-                <div id="taxonomyLevelsDivID" class="form-group center-div" style="padding-top: 20px; display:none;">
+                <div id="taxonomyLevelsDivID" class="form-group centre-div" style="padding-top: 20px; display:none;">
                     <input class="form-control taxonomyLevel_fieldName active_taxonomy_level" value="ORDER_OR_GROUP"
                            readonly/>
                     <input class="form-control taxonomyLevel_fieldName" value="FAMILY" readonly/>
