Disabled 'Confirm' button after sample submission affirmation; Validate 'NA' value for 'TUBE_OR_WELL_ID' column; Rearranged Profile actions and components alhapbetically;Removed count for 'Reads' & 'Barcoding manifest' profile component;

--- a/src/apps/copo_core/templates/copo/components_template.html
+++ b/src/apps/copo_core/templates/copo/components_template.html
@@ -518,7 +518,7 @@
     </button>
 
     <!-- new component button template -->
-    <button title="Add new record"
+    <button title="Add new profile record"
             class="big circular ui icon primary button new-component-template copo-tooltip">
         <i class="icon add sign"></i>
     </button>
